Issue #13279: Support JDK 20 preview language features